# aggbook

./: .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: release.yml
crates/aggclient/: Cargo.toml
crates/aggclient/src/: config.rs  format.rs  main.rs
crates/aggcommon/: Cargo.toml  build.rs
crates/aggcommon/proto/: orderbook.proto
crates/aggcommon/src/: instrument.rs  join_observer.rs  lib.rs  nanos.rs  shutdown.rs  sources.rs
crates/aggserver/: Cargo.toml
crates/aggserver/benches/: bench.rs
crates/aggserver/src/: config.rs  lib.rs  main.rs  server.rs  service.rs  stream.rs
crates/aggserver/src/service/: manager.rs  model.rs  publisher.rs
crates/aggserver/src/service/sources/: binance.rs  bitstamp.rs  factories.rs  mod.rs
crates/aggserver/src/tests/: feed_integration.rs  mod.rs
