[package]
name = "aggserver"
version = "0.2.0"
edition = "2024"
# ...

# [lib]
# path = "src/lib.rs"

[[bin]]
name = "aggserver"
path = "src/main.rs"

[features]
default = []
network-tests = []

[dependencies]
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
tonic = { version = "0.13.1", features = ["transport"] }
aggcommon = { path = "../aggcommon" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-stream = "0.1"
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0"
arrayvec = "0.7"
prost = "0.13.5"
arc-swap = "1.6"
dashmap = "5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.31"
url = "2.5.4"
futures-util = "0.3.31"
async-stream = "0.3.6"

